src/goyacc/y.output

state 0
	$accept: .programa $end 

	PROGRAM  shift 2
	.  error

	programa  goto 1

state 1
	$accept:  programa.$end 

	$end  accept
	.  error


state 2
	programa:  PROGRAM.ID ':' vars bloque 

	ID  shift 3
	.  error


state 3
	programa:  PROGRAM ID.':' vars bloque 

	':'  shift 4
	.  error


state 4
	programa:  PROGRAM ID ':'.vars bloque 
	vars: .    (3)

	VAR  shift 6
	.  reduce 3 (src line 45)

	vars  goto 5

state 5
	programa:  PROGRAM ID ':' vars.bloque 

	'{'  shift 8
	.  error

	bloque  goto 7

state 6
	vars:  VAR.allVars 

	ID  shift 11
	.  error

	allVars  goto 9
	nextId  goto 10

state 7
	programa:  PROGRAM ID ':' vars bloque.    (1)

	.  reduce 1 (src line 42)


state 8
	bloque:  '{'.nextStatuto '}' 
	nextStatuto: .    (11)

	IF  shift 18
	ID  shift 17
	PRINT  shift 19
	.  reduce 11 (src line 55)

	nextStatuto  goto 12
	estatuto  goto 13
	assign  goto 14
	condition  goto 15
	print  goto 16

state 9
	vars:  VAR allVars.    (2)

	.  reduce 2 (src line 44)


state 10
	allVars:  nextId.':' tipo ';' nextVar 

	':'  shift 20
	.  error


state 11
	nextId:  ID.    (5)
	nextId:  ID.',' nextId 

	','  shift 21
	.  reduce 5 (src line 47)


state 12
	bloque:  '{' nextStatuto.'}' 

	'}'  shift 22
	.  error


state 13
	nextStatuto:  estatuto.nextStatuto 
	nextStatuto: .    (11)

	IF  shift 18
	ID  shift 17
	PRINT  shift 19
	.  reduce 11 (src line 55)

	nextStatuto  goto 23
	estatuto  goto 13
	assign  goto 14
	condition  goto 15
	print  goto 16

state 14
	estatuto:  assign.    (12)

	.  reduce 12 (src line 57)


state 15
	estatuto:  condition.    (13)

	.  reduce 13 (src line 58)


state 16
	estatuto:  print.    (14)

	.  reduce 14 (src line 59)


state 17
	assign:  ID.'=' expresion ';' 

	'='  shift 24
	.  error


state 18
	condition:  IF.'(' expresion ')' bloque elseBlock ';' 

	'('  shift 25
	.  error


state 19
	print:  PRINT.'(' nextPrintExp nextPrint ')' ';' 

	'('  shift 26
	.  error


state 20
	allVars:  nextId ':'.tipo ';' nextVar 

	INT_TYPE  shift 28
	FLOAT_TYPE  shift 29
	.  error

	tipo  goto 27

state 21
	nextId:  ID ','.nextId 

	ID  shift 11
	.  error

	nextId  goto 30

state 22
	bloque:  '{' nextStatuto '}'.    (9)

	.  reduce 9 (src line 53)


state 23
	nextStatuto:  estatuto nextStatuto.    (10)

	.  reduce 10 (src line 54)


state 24
	assign:  ID '='.expresion ';' 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	expresion  goto 31
	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 33
	nextExp  goto 32

state 25
	condition:  IF '('.expresion ')' bloque elseBlock ';' 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	expresion  goto 45
	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 33
	nextExp  goto 32

state 26
	print:  PRINT '('.nextPrintExp nextPrint ')' ';' 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	CTE_STRING  shift 48
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	expresion  goto 47
	nextPrintExp  goto 46
	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 33
	nextExp  goto 32

state 27
	allVars:  nextId ':' tipo.';' nextVar 

	';'  shift 49
	.  error


state 28
	tipo:  INT_TYPE.    (24)

	.  reduce 24 (src line 73)


state 29
	tipo:  FLOAT_TYPE.    (25)

	.  reduce 25 (src line 74)


state 30
	nextId:  ID ',' nextId.    (6)

	.  reduce 6 (src line 48)


state 31
	assign:  ID '=' expresion.';' 

	';'  shift 50
	.  error


state 32
	expresion:  nextExp.    (42)

	.  reduce 42 (src line 99)


state 33
	nextExp:  exp.'>' exp 
	nextExp:  exp.'<' exp 
	nextExp:  exp.    (45)

	'>'  shift 51
	'<'  shift 52
	.  reduce 45 (src line 102)


state 34
	exp:  termino.nextTerm 
	nextTerm: .    (41)

	'+'  shift 54
	'-'  shift 55
	.  reduce 41 (src line 96)

	nextTerm  goto 53

state 35
	termino:  nextFactor.    (34)

	.  reduce 34 (src line 88)


state 36
	nextFactor:  factor.    (35)
	nextFactor:  factor.'/' termino 
	nextFactor:  factor.'*' termino 

	'/'  shift 56
	'*'  shift 57
	.  reduce 35 (src line 89)


state 37
	factor:  '('.expresion ')' 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	expresion  goto 58
	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 33
	nextExp  goto 32

state 38
	factor:  cteExp.    (30)

	.  reduce 30 (src line 83)


state 39
	cteExp:  varCte.    (31)

	.  reduce 31 (src line 84)


state 40
	cteExp:  '+'.varCte 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	.  error

	varCte  goto 59

state 41
	cteExp:  '-'.varCte 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	.  error

	varCte  goto 60

state 42
	varCte:  ID.    (26)

	.  reduce 26 (src line 77)


state 43
	varCte:  CTE_I.    (27)

	.  reduce 27 (src line 78)


state 44
	varCte:  CTE_F.    (28)

	.  reduce 28 (src line 79)


state 45
	condition:  IF '(' expresion.')' bloque elseBlock ';' 

	')'  shift 61
	.  error


state 46
	print:  PRINT '(' nextPrintExp.nextPrint ')' ';' 
	nextPrint: .    (23)

	','  shift 63
	.  reduce 23 (src line 71)

	nextPrint  goto 62

state 47
	nextPrintExp:  expresion.    (20)

	.  reduce 20 (src line 68)


state 48
	nextPrintExp:  CTE_STRING.    (21)

	.  reduce 21 (src line 69)


state 49
	allVars:  nextId ':' tipo ';'.nextVar 
	nextVar: .    (8)

	ID  shift 11
	.  reduce 8 (src line 50)

	allVars  goto 65
	nextId  goto 10
	nextVar  goto 64

state 50
	assign:  ID '=' expresion ';'.    (18)

	.  reduce 18 (src line 65)


state 51
	nextExp:  exp '>'.exp 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 66

state 52
	nextExp:  exp '<'.exp 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 67

state 53
	exp:  termino nextTerm.    (38)

	.  reduce 38 (src line 93)


state 54
	nextTerm:  '+'.termino nextTerm 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 68
	nextFactor  goto 35

state 55
	nextTerm:  '-'.termino nextTerm 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 69
	nextFactor  goto 35

state 56
	nextFactor:  factor '/'.termino 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 70
	nextFactor  goto 35

state 57
	nextFactor:  factor '*'.termino 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 71
	nextFactor  goto 35

state 58
	factor:  '(' expresion.')' 

	')'  shift 72
	.  error


state 59
	cteExp:  '+' varCte.    (32)

	.  reduce 32 (src line 85)


state 60
	cteExp:  '-' varCte.    (33)

	.  reduce 33 (src line 86)


state 61
	condition:  IF '(' expresion ')'.bloque elseBlock ';' 

	'{'  shift 8
	.  error

	bloque  goto 73

state 62
	print:  PRINT '(' nextPrintExp nextPrint.')' ';' 

	')'  shift 74
	.  error


state 63
	nextPrint:  ','.nextPrintExp nextPrint 

	CTE_F  shift 44
	CTE_I  shift 43
	ID  shift 42
	CTE_STRING  shift 48
	'('  shift 37
	'+'  shift 40
	'-'  shift 41
	.  error

	expresion  goto 47
	nextPrintExp  goto 75
	varCte  goto 39
	factor  goto 36
	cteExp  goto 38
	termino  goto 34
	nextFactor  goto 35
	exp  goto 33
	nextExp  goto 32

state 64
	allVars:  nextId ':' tipo ';' nextVar.    (4)

	.  reduce 4 (src line 46)


state 65
	nextVar:  allVars.    (7)

	.  reduce 7 (src line 49)


state 66
	nextExp:  exp '>' exp.    (43)

	.  reduce 43 (src line 100)


state 67
	nextExp:  exp '<' exp.    (44)

	.  reduce 44 (src line 101)


state 68
	nextTerm:  '+' termino.nextTerm 
	nextTerm: .    (41)

	'+'  shift 54
	'-'  shift 55
	.  reduce 41 (src line 96)

	nextTerm  goto 76

state 69
	nextTerm:  '-' termino.nextTerm 
	nextTerm: .    (41)

	'+'  shift 54
	'-'  shift 55
	.  reduce 41 (src line 96)

	nextTerm  goto 77

state 70
	nextFactor:  factor '/' termino.    (36)

	.  reduce 36 (src line 90)


state 71
	nextFactor:  factor '*' termino.    (37)

	.  reduce 37 (src line 91)


state 72
	factor:  '(' expresion ')'.    (29)

	.  reduce 29 (src line 82)


state 73
	condition:  IF '(' expresion ')' bloque.elseBlock ';' 
	elseBlock: .    (17)

	ELSE  shift 79
	.  reduce 17 (src line 63)

	elseBlock  goto 78

state 74
	print:  PRINT '(' nextPrintExp nextPrint ')'.';' 

	';'  shift 80
	.  error


state 75
	nextPrint:  ',' nextPrintExp.nextPrint 
	nextPrint: .    (23)

	','  shift 63
	.  reduce 23 (src line 71)

	nextPrint  goto 81

state 76
	nextTerm:  '+' termino nextTerm.    (39)

	.  reduce 39 (src line 94)


state 77
	nextTerm:  '-' termino nextTerm.    (40)

	.  reduce 40 (src line 95)


state 78
	condition:  IF '(' expresion ')' bloque elseBlock.';' 

	';'  shift 82
	.  error


state 79
	elseBlock:  ELSE.bloque 

	'{'  shift 8
	.  error

	bloque  goto 83

state 80
	print:  PRINT '(' nextPrintExp nextPrint ')' ';'.    (19)

	.  reduce 19 (src line 67)


state 81
	nextPrint:  ',' nextPrintExp nextPrint.    (22)

	.  reduce 22 (src line 70)


state 82
	condition:  IF '(' expresion ')' bloque elseBlock ';'.    (15)

	.  reduce 15 (src line 61)


state 83
	elseBlock:  ELSE bloque.    (16)

	.  reduce 16 (src line 62)


28 terminals, 25 nonterminals
46 grammar rules, 84/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
74 working sets used
memory: parser 106/240000
3 extra closures
118 shift entries, 1 exceptions
44 goto entries
60 entries saved by goto default
Optimizer space used: output 92/240000
92 table entries, 0 zero
maximum spread: 28, maximum offset: 79
